# cutie_ai

./: .gitignore  README.md  eval.py  main.py  pyproject.toml  requirements-windows.txt  requirements.txt  test.py  test_retrieval.py
backend/: engine_manager.py  engine_worker.py  query_worker.py  retrieval_worker.py
cutie_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: CHANGELOG_MODIFICATIONS.md  CHANGELOG_MODIFICATIONS_EN.md  DESIGN_PURE_RETRIEVAL_AND_SEARCH_VIEW.md
interfaces/: index_interface.py  llm_interface.py
lib/: custom_queryEngine.py  metadata_extractor.py
ui/: config.py  mainWindow.py  main_window.py  signal_bus.py  style_sheet.py
ui/component/: progress_dialog.py
ui/controller/: engine_controller.py  pushButton_controller.py  search_controller.py
ui/qss/: chat_interface.qss
ui/view/: chat_interface.py  search_interface.py  settings_interface.py
ui/widget/: __init__.py  chat_box.py  chat_display.py  loading_box.py
utils/: autoRetrieval  auto_retrieval.py  domain_keywords.json  domain_patterns.py  index_interface.py  index_manager.py  llm_loader.py  llm_manager.py  metadata_extractor.py  style_sheet.py
