[project]
name = "cutie-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asttokens==2.4.1",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "banks==2.2.0",
    "bcrypt==5.0.0",
    "build==1.3.0",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "chromadb==1.3.2",
    "click==8.3.0",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "colorthief==0.2.1",
    "darkdetect==0.8.0",
    "dataclasses-json==0.6.7",
    "deprecated==1.3.1",
    "dirtyjson==1.0.8",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "durationpy==0.10",
    "filelock==3.20.0",
    "filetype==1.2.0",
    "flatbuffers==25.9.23",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "google-auth==2.42.1",
    "googleapis-common-protos==1.71.0",
    "greenlet==3.2.4",
    "griffe==1.14.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "humanfriendly==10.0",
    "icontract==2.7.1",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.2",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kubernetes==34.1.0",
    "llama-cpp-python==0.3.16",
    "llama-index-core==0.14.7",
    "llama-index-embeddings-huggingface==0.6.1",
    "llama-index-embeddings-openai==0.5.1",
    "llama-index-instrumentation==0.4.2",
    "llama-index-llms-llama-cpp==0.5.1",
    "llama-index-vector-stores-chroma==0.5.3",
    "llama-index-workflows==2.10.3",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nltk==3.9.2",
    "numpy==2.3.4",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "oauthlib==3.3.1",
    "onnxruntime==1.23.2",
    "openai==2.8.1",
    "opentelemetry-api==1.38.0",
    "opentelemetry-exporter-otlp-proto-common==1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.38.0",
    "opentelemetry-proto==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-semantic-conventions==0.59b0",
    "orjson==3.11.4",
    "overrides==7.7.0",
    "packaging==24.2",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "pluggy==1.5.0",
    "posthog==5.4.0",
    "propcache==0.4.1",
    "protobuf==6.33.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.2",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pygments==2.19.2",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "pyside6==6.10.0",
    "pyside6-addons==6.10.0",
    "pyside6-essentials==6.10.0",
    "pyside6-fluent-widgets==1.9.2",
    "pysidesix-frameless-window==0.7.4",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rich==14.2.0",
    "rpds-py==0.28.0",
    "rsa==4.9.1",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "sentence-transformers==5.1.2",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "shiboken6==6.10.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "triton==3.5.1",
    "typer==0.20.0",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "urllib3==2.3.0",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "wrapt==2.0.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
]
